fix autoscrolling down speed

BUG: 408874

Differential Revision: https://phabricator.kde.org/D22071